[package]
name = "ogs"
version = "0.1.0"
authors = ["Piotr Beling <piotr.beling@wmii.uni.lodz.pl>"]
edition = "2021"
license = "LGPL-3.0-or-later"
description = "The library for solving octal games."
documentation = "https://docs.rs/ogs"
repository = "https://github.com/beling/impartial-games"
readme = "README.md"
include = [ "**/*.rs", "Cargo.toml", "README.md" ]
categories = ["algorithms", "game-development", "mathematics", "science"]
keywords = [ "game", "octal", "impartial", "solver"]