[package]
name = "ogsolve"
version = "0.0.5"
authors = ["Piotr Beling <piotr.beling@wmii.uni.lodz.pl>"]
license = "GPL-3.0-or-later"
description = "The program for solving octal games."
edition = "2021"
documentation = "https://docs.rs/ogsolve"
repository = "https://github.com/beling/impartial-games"
readme = "README.md"
include = [ "**/*.rs", "Cargo.toml", "README.md" ]
categories = ["algorithms", "game-development", "mathematics", "science"]
keywords = [ "game", "octal", "impartial", "solver"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ogs = { version=">=0.0.5", path = "../ogs" }
clap = { version="4.0", features = ["derive"] }